fix(social media link)

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div style="display:flex; gap:16px; justify-content:flex-end;">
                     <!-- TikTok -->
 
-                    <a href="https://www.tiktok.com/" target="_blank" rel="noopener noreferrer" aria-label="TikTok"
+                    <a href="https://www.tiktok.com/@thecakelounge.official" target="_blank" rel="noopener noreferrer" aria-label="TikTok"
                         style="text-decoration:none;">
                         <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
                             <path fill="currentColor"
@@ -243,7 +243,7 @@
                     </a>
 
                     <!-- Facebook -->
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="Facebook"
+                    <a href="hhttps://www.facebook.com/okaldhunga/" target="_blank" rel="noopener noreferrer" aria-label="Facebook"
                         style="text-decoration:none;">
                         <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
                             <path fill="currentColor"
