--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </a>
 
                     <!-- Facebook -->
-                    <a href="hhttps://www.facebook.com/okaldhunga/" target="_blank" rel="noopener noreferrer" aria-label="Facebook"
+                    <a href="https://www.facebook.com/okaldhunga/" target="_blank" rel="noopener noreferrer" aria-label="Facebook"
                         style="text-decoration:none;">
                         <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
                             <path fill="currentColor"
